welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:14: error: not found: value c
  if(isFacingTrail(c)){
                   ^SlugSnail:19: error: not found: value c
    if(isFacingTrail(c)){
                     ^SlugSnail:24: error: not found: value c
      if(isFacingTrail(c)){
                       ^